--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="skill-row">
       <img class="skill-img1" src="Images\skills-img1.png" alt="Skill Img 2">
       <h3>Web Designing & Deveplopment</h3>
-      <p style="margin-bottom:0;">I am Learning Web Development.</p>
-      <p style="margin-top:0;">This is my First Website i built using html and CSS. Looking forward for more cool stuff</p>
+      <p style="margin-bottom:0;">I am a student Developer.</p>
+      <p style="margin-top:0;">I have worked on Web Apps in Nodejs and .NET 5. I also have basic Knowlegde of Andriod Development Using Kotlin. </p>
 
     </div>
     <div class="skill-row">
