--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
       <img class="skill-img1" src="Images\skills-img1.png" alt="Skill Img 2">
       <h3>Web Designing & Deveplopment</h3>
       <p style="margin-bottom:0;">I am a student Developer.</p>
-      <p style="margin-top:0;">I have worked on Web Apps in Nodejs and .NET 5. I also have basic Knowlegde of Andriod Development Using Kotlin. </p>
+      <p style="margin-top:0;">Experience in Front-end Web development, with intermediate knowledge of SQL Databases (MS SQL
+Server). Experience with Data Analysis using Python. Also worked on Mobile App Development using
+Flutter </p>
 
     </div>
     <div class="skill-row">
